--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,18 @@
 spring:
   application:
-    name: vic19
+    name: database
   datasource:
-    name: cobid_19_db
+    name: covid_19_db
     platform: mysql
-    url: jdbc:mysql://localhost:3306/db_covid19?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/covid_19_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
-    password: ""
+    password:
+    driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       connectionTestQuery: select 1
       maximum-pool-size: 2
       connection-timeout: 60000
 
-  batch:
-    job:
-      enabled=false:server:
-  error:
-    include-message: always
 logging:
   level:
     com:
@@ -28,14 +24,3 @@ mybatis:
     default-fetch-size: 100
     default-statement-timeout: 30
   mapper-locations: classpath:/dao/*Dao.xml
-server:
-  ssl:
-    key-store: classpath:keystore.p12
-    key-store-password: abcd1234
-    key-store-type: PKCS12
-    key-alias: tomcat
-    key-password: abcd1234
-    enabled: true
-  port: 8443
-  http2:
-    enabled: true
